# ExpressionEvaluator

./: .gitignore  AGENTS.md  ANALYSIS.md  README.md  RPNExpressionEvaluator.sln  TODO.txt
.beads/: issues.jsonl
ExpressionEvaluatorLib/: DefinedFunction.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionEvaluatorLib.vcxproj  ExpressionEvaluatorLib.vcxproj.filters  ExpressionEvaluatorSingleHeader.h  ReadMe.txt  Tokenizer.cpp  Tokenizer.h
ExpressionEvaluatorTests/: AddingUserDefFunctionsTests.cpp  BasicExpressionsTest.cpp  ErrorTests.cpp  ExpressionEvaluatorTests.vcxproj  ExpressionEvaluatorTests.vcxproj.filters  MultiParameterFunctionsTests.cpp  TokenizerTests.cpp  UnaryMinusTests.cpp
ExpressionEvaluator_ExampleApp/: ExpressionEvaluator_ExampleApp.cpp  ExpressionEvaluator_ExampleApp.vcxproj  ExpressionEvaluator_ExampleApp.vcxproj.filters  ReadMe.txt  stdafx.cpp
ExpressionEvaluator_TestSingleHeader/: ExpressionEvaluator_TestSingleHeader.cpp  ExpressionEvaluator_TestSingleHeader.vcxproj  ExpressionEvaluator_TestSingleHeader.vcxproj.filters
QtFrontend/build-untitled-Desktop_Qt_5_10_0_MSVC2017_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
QtFrontend/build-untitled-Desktop_Qt_5_9_1_MSVC2015_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
QtFrontend/untitled/: mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro  untitled.pro.user.2621f1b.4.8-pre1  untitled.pro.user.e502b7b
TestCMake/: .gitignore  CMakeLists.txt  CMakeSettings.json  ExpressionEvaluator_TestRunner.cpp  TestCMake.cpp
TestCMake - Copy/: TestCMake.h
TestCMake - Copy/tests/: FunctionTests.cpp
TestCMake/example_app/: example_app.cpp
TestCMake/include/: ExpressionEvaluator.h  Function.h  catch.hpp
TestCMake/src/: ExpressionEvaluator.cpp  Function.cpp
TestCMake/tests/: AddingUserDefFunctionsTests.cpp  BasicExpressionsTests.cpp  ErrorsTests.cpp  ExpressionEvaluatorTests.cpp  FunctionTests.cpp  UnaryMinusTests.cpp
VSSolution/: RPNExpressionEvaluator.sln
VSSolution/ExpressionEvaluatorLib/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  ExpressionEvaluatorLib.vcxproj
VSSolution/ExpressionEvaluatorTests/: ErrorTests.cpp  (+6 more)
include/: DefinedFunction.h  ExpressionEvaluator.h  Tokenizer.h
single_header/: ExpressionEvaluator.h
src/: example_app.cpp
tests/: AddingUserDefFunctionsTests.cpp  BasicExpressionsTests.cpp  ErrorsTests.cpp  MultiParameterFunctionsTests.cpp  TokenizerTests.cpp  UnaryMinusTests.cpp
(+4 files in other folders)
